Introduce a readonly Location#title to contain the display string of provided values

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -882,6 +882,7 @@ en:
       section:
         basic_information: Basic Information
   location:
+    title: Title
     temporary: Temporary
     temporary_conservation: Conservation
     temporary_exhibit: Exhibit
