Refactor the agent name and contact forms to use the shared/subrecord_form behaviour - fixes bug whereby names, contacts could be sorted;

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1071,6 +1071,10 @@ en:
     software_name: Software Name
     version: Version
     manufacturer: Manufacturer
+  name:
+    _html:
+      singular: Name
+      plural: Names
   agent_person:
     _html:
       singular: Person
