abstract system generated message to I18n

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -39,6 +39,7 @@ en:
     finish_editing: Finish Editing
   states:
     suppressed: Suppressed
+    auto_generated: System generates when saved
   navbar:
     brand: ArchivesSpace
     create: Create
