--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1318,9 +1318,9 @@ en:
     permissions: "Members can:"
     permission_types:
       manage_repository: manage this repository (change groups and other settings)
-      update_location: create/modify/delete location records in this repository
-      update_subject_record: FIXME
-      update_agent_record: FIXME
+      update_location_record: create/modify/delete location records in this repository
+      update_subject_record: update subject records
+      update_agent_record: update agent records
       update_archival_record: create/modify/delete the major record types in this repository
       view_repository: view the records in this repository
       view_suppressed: view suppressed records in this repository
