Turned the remaining static enums into dynamic ones.

--- a/frontend/config/locales/enums/en.yml
+++ b/frontend/config/locales/enums/en.yml
@@ -134,3 +134,26 @@ en:
       mesh: Medical Subject Headings
       rbgenr: "Genre Terms: A Thesaurus for Use in Rare Book and Special Collections Cataloguing"
       tgn: "Getty Thesaurus of Geographic Names"
+    name_description_type:
+      biographical statement: Biographical Statement
+      administrative history: Administrative History
+    event_outcome:
+      pass: Pass
+      partial pass: Partial Pass
+      fail: Fail
+    agent_contact_salutation:
+      mr: Mr.
+      mrs: Mrs.
+      ms: Ms.
+      madame: Madame
+      sir: Sir
+    container_type:
+      box: Box
+      carton: Carton
+      case: Case
+      folder: Folder
+      frame: Frame
+      object: Object
+      page: Page
+      reel: Reel
+      volume: Volume
