--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1325,7 +1325,7 @@ en:
       view_repository: view the records in this repository
       view_suppressed: view suppressed records in this repository
       suppress_archival_record: suppress the major record types in this repository
-      delete_archival_record: suppress the major record types in this repository
+      delete_archival_record: delete the major record types in this repository
     _html:
       singular: Group
       plural: Groups
