--- a/public/config/locales/en.yml
+++ b/public/config/locales/en.yml
@@ -28,6 +28,19 @@ en:
       plural: Accessions
       singular: Accession
   resource:
+    finding_aid_title: Title
+    finding_aid_filing_title: Filing Title
+    finding_aid_date: Date
+    finding_aid_author: Author
+    finding_aid_description_rules: Description Rules
+    finding_aid_language: Language
+    finding_aid_sponsor: Sponsor
+    finding_aid_edition_statement: Edition Statement
+    finding_aid_series_statement: Series Statement
+    finding_aid_revision_date: Revision Date
+    finding_aid_revision_description: Revision Description
+    finding_aid_status: Status
+    finding_aid_note: Note
     _html:
       plural: Resources
       singular: Resource
