Fix nav arrows in linker browse showing entity string (changed to text); Also fixed browse navigation that was broken for the bottom row nav links;

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -73,7 +73,9 @@ en:
     first: First
     last: Last
     previous: "&#171;"
+    previous_label: Previous
     next: "&#187;"
+    next_label: Next
     summary_prefix: Showing
     summary_offset_connector: "-"
     summary_total_connector: of
