Handle session errors for ajax requests; Allow login form to be displayed on homepage via param ?login=true;

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -60,6 +60,7 @@ en:
     manage_enumerations: Manage Enumerations
     logout: Logout
     login: Sign In
+    login_expired_link: Please %{link} again.
     login_fail: Login attempt failed
     login_success: Login Successful. Redirecting...
     register: Register now
