report an error when trying to add a nonexistent user to a group

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1376,6 +1376,7 @@ en:
     group_code: Group code
     description: Description
     members: Members
+    member_usernames: Members
     permissions: "Members can:"
     permission_types:
       manage_repository: manage this repository (change groups and other settings)
