--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -48,6 +48,7 @@ en:
     import_eac: EAC file
     import_ead: EAD file
     import_marcxml: MARCXML
+    import_marcxml_subjects_and_agents: MARCXML (Subjects and Agents only)
     import_accession_csv: Accession CSV
     search_all: All Records
     search_placeholder: Search
@@ -104,6 +105,7 @@ en:
     eac_title: Import an EAC file
     ead_title: Import an EAD File
     marcxml_title: Import a MARCXML file
+    marcxml_subjects_and_agents_title: Import Subjects and Agents from a MARCXML file
     accession_csv_title: Import Accession Records from a CSV File
     import_report: Import Report
     import_another: Import Another File
