43794125 fix leafs spelling fail

--- a/frontend/config/locales/enums/en.yml
+++ b/frontend/config/locales/enums/en.yml
@@ -27,7 +27,7 @@ en:
     extent_extent_type:
       cassettes: Cassettes
       cubic_feet: Cubic Feet
-      leafs: Leafs
+      leaves: Leaves
       linear_feet: Linear Feet
       photographic_prints: Photographic Prints
       photographic_slides: Photographic Slides
