--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -99,7 +99,8 @@ en:
     result_title: Title
     filtered_by: Filtered By
     filter:
-      subjects: Subjects
+      subjects: Subject
+      primary_type: Type
   save_changes_modal:
     body: You have some outstanding changes.  Please save or dismiss these changes to continue.
     save: Save Changes
