--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -93,7 +93,7 @@ en:
     page_connector: of
   search_results:
     title: Search Results
-    no_results: No Records
+    no_results: No records found
     no_results_prefix: There were no search results for
     result_type: Record Type
     result_title: Title
@@ -101,6 +101,7 @@ en:
     filter:
       subjects: Subject
       primary_type: Type
+      accession_date_year: Accession Date
   save_changes_modal:
     body: You have some outstanding changes.  Please save or dismiss these changes to continue.
     save: Save Changes
