--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -35,6 +35,7 @@ en:
     delete_confirm_message: "<p>Please be aware <strong>you cannot undo this action</strong>.</p><p>This action will remove the record from the database, including any references it has to other records.</p>"
     export_eac: Download EAC-CPF
     export_ead: Download EAD
+    export_mods: Download MODS
     loading: Loading...
     revert: Revert Changes
     finish_editing: Finish Editing
