Add query string as a filter and allow removal as per facets

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -101,6 +101,7 @@ en:
     modified: Last Modified
     created: Created
     filter:
+      query: Text
       subjects: Subject
       primary_type: Type
       accession_date_year: Accession Date
