--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -36,6 +36,7 @@ en:
     export_eac: Download EAC-CPF
     export_ead: Download EAD
     export_mods: Download MODS
+    export_mets: Download METS
     loading: Loading...
     revert: Revert Changes
     finish_editing: Finish Editing
