Add a clear all button to the filter

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -101,6 +101,7 @@ en:
     modified: Last Modified
     created: Created
     text_placeholder: Filter by text
+    clear_all: Clear All
     filter:
       query: Text
       subjects: Subject
