added a value for user create error in en locale

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1495,7 +1495,7 @@ en:
         created: User Created
         updated: User Saved
         error_update: User not saved
-        error_create:
+        error_create: User not created
       section:
         account: Account
         edit_account: Edit Account
