--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -45,6 +45,7 @@ en:
     merge: Merge
   states:
     suppressed: Suppressed
+    deleted: Deleted
     auto_generated: System generates when saved
   navbar:
     brand: ArchivesSpace
