Add created_time and last_modified to the json object as readonly attributes and also index these values; change how the create/modified time values are set in the ASModel

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -103,6 +103,8 @@ en:
     created: Created
     text_placeholder: Filter by text
     clear_all: Clear All
+    created: Created
+    modified: Modified
     filter:
       query: Text
       subjects: Subject
